src/pages/css/FormPage.css
form {
    margin: auto;
    width: 50%;
}

@media (max-width: 800px) {
    /* Make form larger on mobile and tablet screens */
    form {
        width: 80%;
    }
}

hr {
    color: gray;
    margin: 3rem 0 3rem 0;
}

h2 {
    margin-bottom: 0.75rem;
}

.unselectable {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.selectable {
    -moz-user-select: text;
    -webkit-user-select: text;
    -ms-user-select: text;
    user-select: text;
}

/* Checkboxes */
.checkbox_label {
    display: inline-block;
    position: relative;
    top: 0.25em;

    width: 1em;
    height: 1em;

    margin: 1rem 0.5rem 0 0;
    border: whitesmoke 0.2rem solid;
    border-radius: 25%;

    -webkit-transition: background-color 300ms ease-in-out;
    transition: background-color 300ms ease-in-out;
}

.checkbox_label input {
    position: absolute;
    opacity: 0;
    height: 0;
    width: 0;
}

.unselected_checkbox_label {
    background-color: white;
}

.unselected_checkbox_label:hover {
    background-color: lightgray;
}

.selected_checkbox_label {
    background-color: #7289DA; /* Blurple */
}

.checkmark_span {
    position: absolute;
}

.selected_checkbox_label .checkmark_span {
    width: 0.30rem;
    height: 0.60rem;
    left: 0.25em;

    border: solid white;
    border-width: 0 0.2rem 0.2rem 0;

    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

/* Radio */
input[type="radio"] {
    margin: 1rem 0.5rem 0 0;
    size: 20rem;
}

/* Select*/
.select_container {
    display: inline-block;
    width: min(20rem, 90%);
    height: 100%;
    min-height: 2rem;

    background: whitesmoke;

    color: black;

    margin-bottom: 0;

    border: 0.1rem solid black;
    border-radius: 0.75rem;

    -webkit-transition: border-radius 400ms;
    transition: border-radius 400ms;
}

.active_select_container {
    height: auto;
    border-bottom: none;
}

.selected_option {
    position: relative;
    top: 0.3rem;
    padding: 0 2rem 0.5rem 1rem;
}

.select_arrow {
    display: inline-block;
    height: 0.5rem;
    width: 0.5rem;

    position: relative;
    float: right;
    right: 1em;
    top: 0.35rem;

    border: solid black;
    border-width: 0 0.2rem 0.2rem 0;

    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);

    -webkit-transition: transform 400ms;
    transition: transform 400ms;
}

.active_select_container .select_arrow {
    -webkit-transform: translateY(40%) rotate(225deg);
    -ms-transform: translateY(40%) rotate(225deg);
    transform: translateY(40%) rotate(225deg);
}

.select_options {
    display: block;
    width: 100%;
    height: 0;

    position: relative;
    right: 0.1rem;

    background: whitesmoke;
    margin-top: 0;

    border: 0.1rem solid black;
    border-top: none;
    border-radius: 0 0 0.75rem 0.75rem;

    text-indent: 0;
    overflow: hidden;

    visibility: hidden;
    opacity: 0;
    transition: visibility 0ms, opacity 400ms linear;
}

.active_select_container .select_options {
    height: auto;
    visibility: visible;
    opacity: 1;
}

.select_options label {
    display: block;
    padding: 0.75rem 1rem;
}

.select_options label:hover {
    background-color: lightgray;
}

.select_options hr {
    margin: 0 1rem;
}

